Fixed nowrap in code for mobile

--- a/src/shared/components/Code/index.module.scss
+++ b/src/shared/components/Code/index.module.scss
@@ -15,3 +15,17 @@
     font-size: font-size('xxs');
   }
 }
+
+.wrapAlways {
+  white-space: normal;
+  overflow-wrap: anywhere;
+  word-break: break-word;
+}
+
+.wrapMobile {
+  @media (max-width: $breakpoint-mobile) {
+    white-space: normal;
+    overflow-wrap: anywhere;
+    word-break: break-word;
+  }
+}
